--- a/public/css/seo-admin.css
+++ b/public/css/seo-admin.css
@@ -6,11 +6,19 @@
 }
 
 h1 {
-    color: #333;
-    font-size: 24px;
-    margin-bottom: 20px;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 10px;
+    color: #2C3E50;  /* Dark Blue-Gray */
+    font-size: 36px !important;
+    font-weight: 700 !important; /* Bold */
+    margin-top: 15px!important;
+    margin-bottom: 20px !important;
+    line-height: 0 !important;
+    padding: 30px!important;
+    background-color: #ECF0F1; /* Light Gray */
+    border-bottom: 4px solid #3498DB; /* Bright Blue */
+    text-align: center;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
 }
 
 form {
@@ -55,14 +63,24 @@ h2 {
     margin-bottom: 5px;
 }
 
+.settings-field input[type="text"] {
+    width: 300px;
+}
+
 .settings-field p {
     font-size: 12px;
     color: #777;
 }
 
+/* Optional: style descriptions */
+.settings-field p.description {
+    margin-top: 5px;
+    color: #666;
+}
+
 /* Button Styles */
 input[type="submit"] {
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -79,4 +97,9 @@ input[type="submit"]:hover {
     background-color: white;
     color: black;
     border: 1px solid #4CAF50;
+}
+
+/* Extra Margin for Submit Button */
+.wrap .submit {
+    margin-top: 20px;
 }
