Improve FAQ style

--- a/public/css/faqs.css
+++ b/public/css/faqs.css
@@ -7,11 +7,13 @@
 }
 
 .faq-section h2 {
-  font-size: 24px;
+  font-size: 40px;
   font-weight: 600;
   color: #333;
   margin-bottom: 20px;
   text-align: center;
+  margin-top: 1px;
+  margin-bottom: 1px;
 }
 
 .faq-section .faq-item {
@@ -23,10 +25,11 @@
 }
 
 .faq-section .faq-item h3 {
-  font-size: 18px;
+  font-size: 25px;
   font-weight: 600;
   color: #444;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .faq-section .faq-item p {
