--- a/public/css/seo-admin.css
+++ b/public/css/seo-admin.css
@@ -11,7 +11,6 @@ h1 {
     font-weight: 700 !important; /* Bold */
     margin-top: 15px!important;
     margin-bottom: 20px !important;
-    line-height: 0 !important;
     padding: 30px!important;
     background-color: #ECF0F1; /* Light Gray */
     border-bottom: 4px solid #3498DB; /* Bright Blue */
@@ -102,4 +101,101 @@ input[type="submit"]:hover {
 /* Extra Margin for Submit Button */
 .wrap .submit {
     margin-top: 20px;
+}
+
+.card {
+	max-width: none;
+	border-radius: 25px; /* Soft rounded corners */
+	background-color: #f8f9fa; /* Neutral background */
+}
+
+.text-muted {
+	color: #6c757d !important; /* Muted text for a softer appearance */
+}
+
+.app-password-container {
+	background-color: #f9f9f9;
+	padding: 20px;
+	border-radius: 5px;
+	box-shadow: 0 0 10px rgba(0,0,0,0.1);
+	max-width: 500px;
+	margin: 0 auto;
+	margin-top: 20px;
+}
+
+.app-password-container label {
+	display: block;
+	margin-bottom: 8px;
+	font-weight: bold;
+}
+
+.app-password-container select,
+.app-password-container input[type="text"] {
+	width: 100%;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	margin-bottom: 15px;
+	box-sizing: border-box;
+}
+
+.app-password-result {
+    background-color: #e8f5e9; /* light green background */
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px; /* space between items */
+	margin-top: 20px;
+}
+
+.app-password-result h3 {
+    margin: 0;
+    font-size: 1.2em;
+}
+
+.app-password-result h2 {
+    margin: 0;
+    font-size: 1.4em;
+    word-break: break-word; /* break long passwords to the next line */
+}
+
+#copyButton {
+    padding: 8px 15px;
+}
+
+.error-card {
+    padding: 10px 15px;
+    border: 1px solid #f44336; /* Red */
+    background-color: #ffebee; /* Light red */
+    margin: 15px 0;
+    border-radius: 5px;
+}
+
+.app-password-result {
+    padding: 10px 15px;
+    border: 1px solid #4caf50; /* Green */
+    background-color: #e8f5e9; /* Light green */
+    margin: 15px 0;
+    border-radius: 5px;
+}
+
+.export-zip-button:hover {
+    background-color: #090909;
+}
+
+.export-zip-button {
+    background-color: #376038;
+    border: none;
+    color: white;
+    padding: 7px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
 }
