--- a/assets/css/usf-global.css
+++ b/assets/css/usf-global.css
@@ -37,3 +37,69 @@ Link styles
 a {
     word-wrap: break-word;
 }
+
+/**
+Heading styles
+**/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 600;
+}
+
+.serpcraft-h2 {
+    font-size: 28px;
+    font-weight: bold;
+    color: #333333;
+    margin-top: 30px;
+    margin-bottom: 25px;
+    display: inline-block; /* Makes the H2 width fit its content */
+    position: relative; /* Required for absolute positioning of pseudo-element */
+}
+
+.serpcraft-h2::after {
+    content: ''; /* Required for pseudo-elements */
+    display: block;
+    width: 100%; /* Matches the width of the text */
+    height: 1px; /* Thickness of the border */
+    background: #333333; /* Color of the border */
+    position: absolute;
+    left: 0;
+    bottom: -2px; /* Adjust vertical position of the border */
+}
+
+.serpcraft-h3 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #666666;
+    margin-top: 25px;
+    margin-bottom: 10px;
+}
+
+.serpcraft-h4 {
+    font-size: 20px;
+    font-weight: normal;
+    color: #777777;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.serpcraft-h5 {
+    font-size: 18px;
+    font-weight: normal;
+    color: #777777;
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+.serpcraft-h6 {
+    font-size: 16px;
+    font-weight: normal;
+    color: #777777;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    text-transform: italic;
+}
